Traduccion al español del mensaje del loader y cambio de texto a simbolos en los botones UI del marcador kanji para el elemento 3D de la gorra.

--- a/estilos/ArJsLoader.css
+++ b/estilos/ArJsLoader.css
@@ -1,3 +1,5 @@
+
+
 .arjs-loader {
     height: 100%;
     width: 100%;
@@ -15,4 +17,5 @@
     text-align: center;
     font-size: 1.25em;
     color: white;
+    font-family: sans-serif;
 }
